<resources>
    <string name="app_name">Sport_App</string>
    <string name="Sing_In">Sign In</string>
    <string name="Sing_up">Sign Up</string>
    <string name="mail_example">mail@example.com</string>
    <string name="email_tag">Email</string>
    <string name="password_tag">Password</string>
    <string name="password_example">************</string>
    <string name="password_reminder">Forgot Password?</string>
    <string name="join_us">Join Us!</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="select_location">Select Location</string>
    <string name="select_sport">Select Sport</string>
    <string name="results">10 Results Found</string>
    <string name="price">$ Price</string>
    <string name="profile_name">Name, Surname</string>
    <string name="sport">Sport</string>
    <string name="country_city">Country, City</string>
    <string name="message">Message</string>
    <string name="call">Contact</string>
    <string name="profile_info">To edit this text, select the text box and double click. sed egestas dolor. Fusce et ex eu mauris egestas faucibus id non purus. select the text box and double click.</string>
    <string name="sing_in_with_google">Sing in with Google</string>
    <string name="slogan">your sports store app</string>
    <string name="search">Search</string>
    <string name="likes">Likes</string>
    <string name="sport_app_search">Sport App Search</string>
    <string name="location_1">Location_1</string>
    <string name="location_2">location_2</string>
    <string name="location_3">location_3</string>
    <string name="bogot">Bogota</string>
    <string name="medellin">Medellin</string>
    <string name="barranquilla">Barranquilla</string>
    <string name="locations">Locations</string>
    <string name="tunja">Tunja</string>
    <string name="take_picture">Take Picture</string>
    <string name="open_gallery">Open Gallery</string>
</resources>