<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- map -->

    <fragment
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:tag="map"
        android:id="@+id/map_fragment" />

    <!-- Buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_location_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/medium_blue"
            android:text="@string/bogot"
            android:textSize="20sp"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_location_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/medium_blue"
            android:text="@string/medellin"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/btn_location_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/medium_blue"
            android:text="@string/tunja"
            android:textSize="20dp"
            android:layout_margin="5dp"/>

    </LinearLayout>

</LinearLayout>