<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/iv_circle_logo_app"
        android:layout_width="189dp"
        android:layout_height="171dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/app_circle_logo" />

    <TextView
        android:id="@+id/tv_sing_in"
        android:layout_width="202dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/Sing_In"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_circle_logo_app" />

    <TextView
        android:id="@+id/tv_email_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/email_tag"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/til_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sing_in"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="331dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sing_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_mail_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail_example" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/password_tag"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:layout_constraintVertical_bias="0.057"
        tools:layout_editor_absoluteX="52dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="331dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_example" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_sing_in"
        android:layout_width="323dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/medium_blue"
        android:text="@string/Sing_In"
        app:cornerRadius="10dp"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="558dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/password_reminder"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="653dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/Sing_In"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="650dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

