<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_imageProfile"
        android:layout_width="158dp"
        android:layout_height="199dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_picture" />

    <ImageView
        android:id="@+id/iv_editPhoto"
        android:layout_width="29dp"
        android:layout_height="27dp"
        app:srcCompat="@drawable/edit"
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="162dp" />

    <TextView
        android:id="@+id/tv_joinUs"
        android:layout_width="202dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/join_us"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_imageProfile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="318dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/dark_gray"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_joinUs">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="318dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/til_name"
        tools:layout_editor_absoluteX="46dp"
        android:textColorHint="@color/dark_gray"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/dark_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_tag" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        android:layout_width="318dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/dark_gray"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pwd"
        android:layout_width="318dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/dark_gray"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_tag" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pwd_confirm"
        android:layout_width="318dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/dark_gray"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_pwd">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_pwd" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_sing_in"
        android:layout_width="323dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/medium_blue"
        android:text="@string/Sing_up"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/til_pwd_confirm"
        tools:layout_editor_absoluteX="44dp" />

</androidx.constraintlayout.widget.ConstraintLayout>