<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_service_Profile_picture"
                android:layout_width="110dp"
                android:layout_height="86dp"
                app:srcCompat="@drawable/profile_picture" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/price"
                android:textAlignment="center"
                android:textColor="@color/dark_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="0dp">

                <TextView
                    android:id="@+id/profile_name1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/profile_name"
                    android:textColor="@color/dark_gray"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/iv_like1"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="end"
                    android:layout_marginStart="8dp"
                    app:srcCompat="@drawable/like_inactive" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="2dp">

                <TextView
                    android:id="@+id/tv_sport_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sport"
                    android:textColor="@color/dark_gray"
                    android:textSize="13sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/profile_info1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_info"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                android:textAlignment="textStart" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
