<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@color/banner_gray"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Botón Search -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/search_active" />

            <TextView
                android:id="@+id/tv_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Botón Likes -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_likes"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/like_menu_inactive" />

            <TextView
                android:id="@+id/tv_likes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likes"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Botón Message -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_comments"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/comment_inactive" />

            <TextView
                android:id="@+id/tv_message_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
