<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_search_tittle"
        android:layout_width="274dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/sport_app_search"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toEndOf="@+id/tv_search_tittle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_location"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:textColorHint="@color/dark_gray"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/actv_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/select_location"
            android:inputType="none"
            android:paddingStart="12dp"
            android:paddingTop="16dp"
            android:paddingEnd="12dp"
            android:paddingBottom="16dp"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sport"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/dark_gray"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/til_location"
        app:layout_constraintTop_toTopOf="parent">


        <AutoCompleteTextView
            android:id="@+id/actv_sport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/select_sport"
            android:inputType="none"

            android:paddingStart="12dp"
            android:paddingTop="16dp"
            android:paddingEnd="12dp"
            android:paddingBottom="16dp"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:layout_marginBottom="80dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <Button
        android:id="@+id/btn_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="636dp"
        android:backgroundTint="@color/medium_blue"
        android:text="@string/locations"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_menu"
        android:name="com.example.sport_app.Fragments.MenuFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
